@@ -22,7 +22,7 @@ import org.w3c.dom.Document;
 import javax.xml.crypto.dsig.XMLSignatureFactory;
 import javax.xml.parsers.DocumentBuilderFactory;
 import java.io.*;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.security.*;
 import java.security.cert.X509Certificate;
 
@@ -62,7 +62,7 @@ public class ECodexEvidenceBuilderTest {
 
     @BeforeAll
     public static void setUpTestEnv() throws IOException {
-        File testDir = Paths.get(PATH_OUTPUT_FILES).toFile();
+        File testDir = Path.of(PATH_OUTPUT_FILES).toFile();
         try {
             FileUtils.forceDelete(testDir);
         } catch (IOException e) {}
@@ -520,10 +520,10 @@ public class ECodexEvidenceBuilderTest {
 
         if (ks.containsAlias(alias)) {
             key = ks.getKey(alias, keyPass.toCharArray());
-            if (key instanceof PrivateKey) {
+            if (key instanceof PrivateKey privateKey1) {
                 X509Certificate cert = (X509Certificate) ks.getCertificate(alias);
                 publicKey = cert.getPublicKey();
-                privateKey = (PrivateKey) key;
+                privateKey = privateKey1;
                 keyPair = new KeyPair(publicKey, privateKey);
             } else {
                 keyPair = null;
