@@ -5,7 +5,7 @@ import org.junit.jupiter.api.BeforeAll;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.util.FileSystemUtils;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 import static eu.domibus.connector.persistence.spring.PersistenceProfiles.STORAGE_DB_PROFILE_NAME;
 import static eu.domibus.connector.persistence.spring.PersistenceProfiles.STORAGE_FS_PROFILE_NAME;
@@ -17,7 +17,7 @@ class LargeFilePersistenceServiceFilesystemImplTCase extends CommonLargeFilePers
 
     @BeforeAll
     public static void deleteFS() {
-        FileSystemUtils.deleteRecursively(Paths.get("./target/ittest").toFile());
+        FileSystemUtils.deleteRecursively(Path.of("./target/ittest").toFile());
     }
 
     @Override
