@@ -29,10 +29,10 @@ import org.springframework.core.io.Resource;
 import org.springframework.util.StreamUtils;
 import org.xml.sax.SAXException;
 
-import javax.xml.bind.JAXBContext;
-import javax.xml.bind.JAXBElement;
-import javax.xml.bind.JAXBException;
-import javax.xml.bind.Unmarshaller;
+import jakarta.xml.bind.JAXBContext;
+import jakarta.xml.bind.JAXBElement;
+import jakarta.xml.bind.JAXBException;
+import jakarta.xml.bind.Unmarshaller;
 import javax.xml.parsers.ParserConfigurationException;
 import javax.xml.transform.stream.StreamSource;
 import java.io.*;
@@ -299,7 +299,7 @@ public abstract class ECodexContainerFactoryServiceITCaseTemplate {
 
         assertThat(check.isSuccessful()).isTrue();
 
-        DSSDocument dssDocument = eCodexContainer.getBusinessAttachments().get(0);
+        DSSDocument dssDocument = eCodexContainer.getBusinessAttachments().getFirst();
         assertThat(dssDocument.getName()).isEqualTo("Addition.pdf");
 
     }
